--- a/src/pages/App.less
+++ b/src/pages/App.less
@@ -37,6 +37,9 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
   font-size: .825rem;
   opacity: .5;
 }
+.text-center{
+  text-align: center;
+}
 .num-input{
   font-size: 1rem;
   width: 100%;
