--- a/src/pages/App.less
+++ b/src/pages/App.less
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
   color: white;
 }
 .container{
-  width: 53.333333%;
+  width: 62.5%;
   height: 100%;
   margin: 0 auto;
 }
@@ -50,6 +50,11 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
   border-radius: 1.5rem;
   background-color: #363636;
 }
+@media screen and (min-width: 240px) {
+  .container{
+    width: 80%;
+  }
+}
 @media screen and (min-width: 1200px) {
   .container{
     width: 1000px;
@@ -57,7 +62,7 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
 }
 @media screen and (min-width: 1400px) {
   .container{
-    width: 1024px;
+    width: 1200px;
   }
 }
 .clearGap{
