--- a/src/pages/Global.css
+++ b/src/pages/Global.css
@@ -27,14 +27,18 @@
 }
 
 :root{
-  --primary-color:#7553CB;
-  --primary-light-color:#9577E0;
-  --second-color: #FF694E;
-  --second-light-color:#FF9A88;
+  --primary-color:#41ACEF;
+  --primary-light-color:#5fb8f0;
+  --third-color: #FF694E;
+  --third-light-color:#FF9A88;
+  --second-color: #1fbb65;
+  --second-light-color: #54e796;
+  --fourth-color: #35caa9;
+  --fourth-light-color: #5ad6bb;
 
   --normal-black: #3e3e3e;
 
-  --toastify-color-progress-dark: #F6904D;
+  --toastify-color-progress-dark: #41ACEF;
 
   --warning:#F95B46;
   --in-progress:#3EA8E0;
