--- a/src/pages/Global.css
+++ b/src/pages/Global.css
@@ -32,7 +32,7 @@
   --third-color: #FF694E;
   --third-light-color:#FF9A88;
   --second-color: #1fbb65;
-  --second-light-color: #54e796;
+  --second-light-color: #39d37e;
   --fourth-color: #35caa9;
   --fourth-light-color: #5ad6bb;
 
