--- a/src/pages/App.less
+++ b/src/pages/App.less
@@ -96,3 +96,28 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
 .ant-tabs-top > .ant-tabs-nav::before{
   border-color: #ddd;
 }
+.border{
+  width: 100px;
+  height: 0px;
+  opacity: 1;
+  border: 2px solid #e5e5e5;
+  position: absolute;
+  top: 98px;
+  left: 50%;
+  margin-left: -50px;
+}
+.h2 {
+  width: 9rem;
+  font-size: 24px;
+  text-align: center;
+  font-family: Noto Sans S Chinese-Bold, Noto Sans S Chinese;
+  font-weight: bold;
+  color: #333333;
+  position: absolute;
+  top: 2rem;
+  left: 50%;
+  margin-left: -4.5rem;
+}
+.bg{
+  background: #F4F9FB;
+}
