--- a/src/pages/App.less
+++ b/src/pages/App.less
@@ -121,3 +121,18 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
 .bg{
   background: #F4F9FB;
 }
+.daysInput{
+  width: 35.1rem;
+  margin-top: 1rem;
+  height: 5rem;
+  line-height: 5rem;
+  border-radius: 1rem;
+  border-radius: 20px 20px 20px 20px;
+  border: 2px solid #35caa9;
+  margin: 70px 0 0 20px;
+  background: white;
+  font-size: 0.875rem;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+}
