Penalty reminder pop-up window

--- a/src/pages/App.less
+++ b/src/pages/App.less
@@ -117,22 +117,47 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
   top: 2rem;
   left: 50%;
   margin-left: -4.5rem;
+  img{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+  }
 }
 .bg{
   background: #F4F9FB;
 }
 .daysInput{
-  width: 35.1rem;
+  width: 30rem;
   margin-top: 1rem;
   height: 5rem;
   line-height: 5rem;
   border-radius: 1rem;
   border-radius: 20px 20px 20px 20px;
   border: 2px solid #35caa9;
-  margin: 70px 0 0 20px;
+  margin: 2rem 0 0 2.5rem;
   background: white;
   font-size: 0.875rem;
-  text-align: center;
   position: relative;
   overflow: hidden;
+}
+.day-input{
+  font-size: 1rem;
+  width: 51%;
+  height: 2rem;
+  padding-left: 1.5rem;
+  border:1px solid var(--border-color);
+  outline:none;
+  border-radius: 1.5rem;
+  background-color: white;
+  text-align: center;
+}
+.divider{
+  position: absolute;
+  width: 0px;
+  height: 44px;
+  opacity: 1;
+  border: 2px solid #35CAA9;
+  top: 24.7rem;
+  right: 15rem;
+  z-index: 9;
 }
