--- a/src/pages/App.less
+++ b/src/pages/App.less
@@ -320,5 +320,18 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
         margin-bottom: 1rem;
       }
     }
+    .notFound {
+      width: 18.5rem;
+      height: 3.75rem;
+      background: #fff;
+      box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.16);
+      border-radius: 10px 10px 10px 10px;
+      margin-top: 2px;
+      font-weight: 500;
+      font-size: 16px;
+      color: rgb(112, 122, 131);
+      line-height: 3.75rem;
+      padding-left: 24px;
+    }
   }
 }
