--- a/src/pages/App.less
+++ b/src/pages/App.less
@@ -141,16 +141,15 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
   z-index: 99;
 }
 .daysInput{
-  width: 30rem;
-  margin-top: 1rem;
-  height: 5rem;
-  line-height: 5rem;
+  width: 93%;
+  height: 12%;
+  line-height: 4rem;
   border-radius: 1rem;
   border-radius: 20px 20px 20px 20px;
   border: 2px solid #35caa9;
   margin: 2rem 0 0 2.5rem;
   background: white;
-  font-size: 0.875rem;
+  font-size: 3.1%;
   position: relative;
   overflow: hidden;
 }
@@ -158,7 +157,7 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
   font-size: 1rem;
   width: 51%;
   height: 2rem;
-  padding-left: 1.5rem;
+  padding-left: 4.6%;
   border:1px solid var(--border-color);
   outline:none;
   border-radius: 1.5rem;
@@ -168,11 +167,11 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
 .divider{
   position: absolute;
   width: 0px;
-  height: 44px;
+  height: 74%;
   opacity: 1;
   border: 2px solid #35CAA9;
-  top: 1rem;
-  right: 14.5rem;
+  top: 14%;
+  right: 47%;
   z-index: 9;
 }
 .arrowIcon{
@@ -192,7 +191,7 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
   margin-top: -10px;
 }
 .MenuBar{
-  width: 25%;
+  width: 22%;
   min-height: 35rem;
   background: #fff;
   border-radius: 10px 10px 10px 10px;
@@ -324,6 +323,7 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
         font-weight: 400;
         color: #333333;
         margin-bottom: 1rem;
+        cursor: pointer;
       }
     }
     .notFound {
