Replacing the control contract

--- a/src/pages/App.less
+++ b/src/pages/App.less
@@ -142,7 +142,7 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
 }
 .daysInput{
   width: 93%;
-  height: 12%;
+  height: 4rem;
   line-height: 4rem;
   border-radius: 1rem;
   border-radius: 20px 20px 20px 20px;
