--- a/src/pages/App.less
+++ b/src/pages/App.less
@@ -323,7 +323,7 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
       height: 3.75rem;
       background: #fff;
       box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.16);
-      border-radius: 10px 10px 10px 10px;
+      border-radius: 10px;
       margin-top: 2px;
       font-weight: 500;
       font-size: 16px;
@@ -332,6 +332,14 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
       padding-left: 24px;
     }
   }
+}
+.returnIcon {
+  width: 100px;
+  height: 10x0px;
+  border-radius: 30px;
+  position: fixed;
+  top: 50%;
+  left: 40px;
 }
 
 @media screen and (min-width:  1440px) {
