--- a/src/pages/Global.css
+++ b/src/pages/Global.css
@@ -77,3 +77,15 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.mantine-1qycoz3 {
+  border-radius: 20px;
+  border: 1px solid #707070;
+}
+#rte {
+  border-radius: 20px 20px 0 0;
+  border-bottom: 1px solid #707070;
+}
+.quill img {
+  width: 500px;
+  height: 500px;
+}
