--- a/src/pages/App.less
+++ b/src/pages/App.less
@@ -11,9 +11,7 @@ body {
   background-color: #fff;
   color: #404040;
 }
-.cursor {
-  cursor: pointer;
-}
+
 ul,li{
   margin: 0;
   padding: 0;
@@ -179,104 +177,25 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
   margin-top: -10px;
 }
 .MenuBar{
-  width: 22%;
-  min-height: 35rem;
+  position: relative;
+  width: 991px;
+  height: 82px;
+  margin: auto;
   background: #fff;
-  border-radius: 10px 10px 10px 10px;
-  border: 2px solid #e5e5e5;
+  box-shadow: 0px 0px 20px 1px rgba(53,202,169,0.15);
+  border-radius: 10px;
+  border: 2px solid #F5F5F5;
   padding: 0 2rem;
-  position: fixed;
-  z-index: 99;
+  z-index: 20;
   box-sizing: border-box;
-  .price {
-    margin-top: 3rem;
-    position: relative;
-    .currencyType {
-      width: 18.5rem;
-      height: 3.75rem;
-      border-radius: 10px 10px 10px 10px;
-      border: 2px solid #e5e5e5;
-      line-height: 3.75rem;
-      font-size: 18px;
-      font-family: Noto Sans S Chinese-Regular, Noto Sans S Chinese;
-      font-weight: 400;
-      color: #666666;
-      padding-left: 3.75rem;
-      margin-bottom: 1.5rem;
-      position: relative;
-      cursor: pointer;
-    }
-    .select{
-      width: 18.5rem;
-      background: #fff;
-      box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.16);
-      border-radius: 10px 10px 10px 10px;
-      padding: 0 0 0 3.75rem;
-      position: absolute;
-      top: 7rem;
-      right: -4px;
-      z-index: 99;
-      div {
-        height: 61px;
-        font-size: 18px;
-        font-family: Noto Sans S Chinese-Regular, Noto Sans S Chinese;
-        font-weight: 400;
-        color: #333333;
-        line-height: 61px;
-        cursor: pointer;
-      }
-    }
-    .to {
-      font-size: 18px;
-      font-family: Noto Sans S Chinese-Regular, Noto Sans S Chinese;
-      color: #999999;
-      text-align: center;
-      margin: 0.5rem 0;
-    }
-    input {
-      width: 200px;
-      height: 60px;
-      border-radius: 10px 10px 10px 10px;
-      border: 2px solid #e5e5e5;
-      margin-left: 3rem;
-      font-size: 18px;
-      outline: none;
-      text-align: center;
-      ::-webkit-input-placeholder {
-        font-size: 18px;
-        font-family: Noto Sans S Chinese-Regular, Noto Sans S Chinese;
-        font-weight: 400;
-        color: #d0d0d0;
-      }
-    }
-    .apply {
-      width: 18.5rem;
-      height: 3.75rem;
-      border-radius: 10px 10px 10px 10px;
-      font-size: 18px;
-      font-family: Noto Sans S Chinese-Bold, Noto Sans S Chinese;
-      font-weight: bold;
-      color: #fff;
-      text-align: center;
-      line-height: 3.75rem;
-      margin-top: 24px;
-    }
-    .flase {
-      background: rgba(53, 202, 169, 0.5);
-      cursor: not-allowed;
-    }
-    .true {
-      background: rgba(53, 202, 169, 1);
-      cursor: pointer;
-    }
-  }
+  margin-bottom: 54px;
+  margin-top: 48px;
   .collection {
-    margin-top: 3rem;
+    height: 100%;
     .search {
       width: 100%;
-      height: 3.75rem;
+      height: 100%;
       border-radius: 10px 10px 10px 10px;
-      border: 2px solid #e5e5e5;
       position: relative;
       span {
         position: absolute;
@@ -306,6 +225,7 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
       margin-top: 2rem;
       padding-left: 1.5rem;
       overflow: auto;
+      z-index: 100;
       div {
         height: 1.5rem;
         font-size: 16px;
@@ -346,9 +266,6 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
   .container{
     width: 82rem;
   }
-  .MenuBar{
-    width: 320px;
-  }
 }
 @media screen and (min-width: 1920px) {
   .container{
@@ -358,9 +275,6 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
     height: 78px;
     line-height: 78px;
     margin: 2rem 0 0 0;
-  }
-  .MenuBar{
-    width: 360px;
   }
 }
 .hidden{
