--- a/src/pages/Global.css
+++ b/src/pages/Global.css
@@ -102,3 +102,9 @@
   width: 100%;
   height: 48px;
 }
+.Chinese-Bold {
+  font-family: Noto Sans S Chinese-Bold, Noto Sans S Chinese;
+}
+.Chinese-Regular {
+  font-family: Noto Sans S Chinese-Regular, Noto Sans S Chinese;
+}
