--- a/src/pages/App.less
+++ b/src/pages/App.less
@@ -186,7 +186,7 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
   border-radius: 10px;
   border: 2px solid #F5F5F5;
   padding: 0 2rem;
-  z-index: 20;
+  z-index: 80;
   box-sizing: border-box;
   margin-bottom: 54px;
   margin-top: 48px;
@@ -195,7 +195,7 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
     .search {
       width: 100%;
       height: 100%;
-      border-radius: 10px 10px 10px 10px;
+      border-radius: 10px;
       position: relative;
       span {
         position: absolute;
@@ -222,10 +222,12 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
     }
     .result {
       height: 300px;
-      margin-top: 2rem;
-      padding-left: 1.5rem;
+      margin-top: 8px;
+      padding: 12px;
       overflow: auto;
-      z-index: 100;
+      background: #fff;
+      box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.16);
+      border-radius: 10px;
       div {
         height: 1.5rem;
         font-size: 16px;
