--- a/src/pages/Global.css
+++ b/src/pages/Global.css
@@ -108,6 +108,9 @@
   width: 100%;
   height: 48px;
 }
+.none {
+  opacity: 0;
+}
 .Chinese-Bold {
   font-family: Noto Sans S Chinese-Bold, Noto Sans S Chinese;
 }
