Improve the search function

--- a/src/pages/App.less
+++ b/src/pages/App.less
@@ -3,9 +3,7 @@
 @import '~react-toastify/dist/ReactToastify.css';
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Times New Roman;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fff;
@@ -27,6 +25,7 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
   width: 94%;
   height: 100%;
   margin: 0 auto;
+  font-family: Times New Roman;
 }
 .error{
   background: var(--dark-red);
@@ -103,7 +102,6 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
   width: 9rem;
   font-size: 24px;
   text-align: center;
-  font-family: Noto Sans S Chinese-Bold, Noto Sans S Chinese;
   font-weight: bold;
   color: #333333;
   position: absolute;
@@ -214,7 +212,6 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
         line-height: 40px;
         ::-webkit-input-placeholder {
           font-size: 18px;
-          font-family: Noto Sans S Chinese-Regular, Noto Sans S Chinese;
           font-weight: 400;
           color: #d0d0d0;
         }
@@ -231,7 +228,6 @@ h1, h2, h3, h4, h5, h6,a,.ant-tabs{
       div {
         height: 1.5rem;
         font-size: 16px;
-        font-family: Noto Sans S Chinese-Regular, Noto Sans S Chinese;
         color: #333333;
         margin-bottom: 1rem;
         cursor: pointer;
