--- a/src/pages/Global.css
+++ b/src/pages/Global.css
@@ -133,3 +133,21 @@
 .bag {
   background: #f4f9fb;
 }
+.AirdropQuantity {
+  width: 180px;
+  height: 40px;
+  outline: none;
+  border-radius: 20px;
+  font-size: 16px;
+  margin-left: 20px;
+  padding-left: 10px;
+  background: #FFFFFF;
+border: 1px solid #CEEAFF;
+box-shadow: -4px 4px 12px 0px rgba(197,212,231,0.18), 5px -3px 12px 0px rgba(0,114,255,0.1);
+}
+.ps {
+  width: 180px;
+  font-size: 12px;
+  margin-left: 20px;
+  padding-left: 5px;
+}
